# demoProject

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  report.html
latest_logs/seleniumbs.line_3/: basic_test_info.txt  page_source.html
src/: dateTM.py  lvCheng.py  playwrigtTest.py  rq.py  seleniumbs.py  streamlit.py
src/config/: base_config.py
src/helloagents/chapter1/: FirstAgentTest.py
src/tools/: browser_launcher.py  cdp_browser.py
