[project]
name = "demoproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hello-agents[protocol]==0.2.2",
    "httpx==0.28.1",
    "opencv-python>=4.11.0.86",
    "pillow==9.5.0",
    "playwright==1.45.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tavily-python>=0.7.21",
]
